engine/tests/fixtures/invalid/shape-transform/entity-base.tg
entity entity_base {
  name "Base"
  description "Base entity for invalid shape transform tests"

  fields {
    id uuid required
    title string required
    status string optional
  }

  status active
}
